# Evidence-Tracker

./: .gitattributes  .gitignore  README.md  SILENT_UPDATE_SETUP.md  eslint.config.js  generate-keys.ps1  generate_keys.py  index.html  package-lock.json  package.json  tailwind.config.js  updater_private.pem  updater_public.pem  vite.config.mjs
.github/workflows/: release.yml
.vercel/: project.json
scripts/: checkTranslations.js  seedCustomSums.js
src/: App.jsx  Overview.jsx  index.css  main.jsx  tauri-api-mock.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: tags.json
src-tauri/src/: main.rs
src/backup/: App.jsx
src/components/: CustomSums.jsx  DailySalesChart.jsx  DailySummary.jsx  EntriesTable.jsx  EntryForm.jsx  ErrorBoundary.jsx  Export.jsx  GlobalSearch.jsx  Header.jsx  MonthlySummary.jsx  OverviewSidebar.jsx  TagManager.jsx  ThemeProvider.jsx  UpdateManager.jsx  useStorage.js
src/localization/: LanguageContext.jsx  en.json  ro.json
src/utils/: hooks.js  storage.js
